[package]
name = "navigator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
html-escape = "0.2"
chrono = { version = "0.4", features = ["serde"] }
